compiler/tests/fixtures/compile_errors/unary_minus_on_bool.fe
contract Foo:

    pub def bar():
        x:bool = true
        -x
